Fix disabled input opacity for better visibility on iOS

--- a/resources/css/scoutingPASS.css
+++ b/resources/css/scoutingPASS.css
@@ -263,6 +263,7 @@ td {
 input:disabled {
   color: #fff;
   -webkit-text-fill-color: #fff;
+  opacity: 1;
 }
 
 input,
